--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+temp.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -177,7 +179,8 @@ cython_debug/
 .DS_Store
 .AppleDouble
 .LSOverride
-Icon[]
+Icon[
+]
 
 # Thumbnails
 ._*
