--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     networks:
       - weaviate-network
 
-  weaviate:
+  weaviate-node-1:  # Founding member service name
     profiles: ["weaviate"]  # This makes Weaviate optional
     command:
     - --host
@@ -18,13 +18,15 @@ services:
     - '8080'
     - --scheme
     - http
-    image: cr.weaviate.io/semitechnologies/weaviate:1.30.1
-    ports:
-    - 8080:8080
-    - 50051:50051
+    image: cr.weaviate.io/semitechnologies/weaviate:1.31.0-rc.0
     restart: on-failure:0
+    ports:
+     - "8080:8080"
+     - 50051:50051
     environment:
+      AUTOSCHEMA_ENABLED: 'false'
       QUERY_DEFAULTS_LIMIT: 25
+      QUERY_MAXIMUM_RESULTS: 10000
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
       PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
       ASYNC_INDEXING: 'true'
@@ -32,8 +34,81 @@ services:
       ENABLE_API_BASED_MODULES: 'true'
       BACKUP_FILESYSTEM_PATH: '/var/lib/weaviate/backups'
       CLUSTER_HOSTNAME: 'node1'
+      CLUSTER_GOSSIP_BIND_PORT: '7100'
+      CLUSTER_DATA_BIND_PORT: '7101'
+      RAFT_JOIN: 'node1,node2,node3'
+      RAFT_BOOTSTRAP_EXPECT: 3
     volumes:
-    - weaviate-data:/var/lib/weaviate
+    - weaviate-data1:/var/lib/weaviate
+    networks:
+      - weaviate-network
+  weaviate-node-2:  # Founding member service name
+    profiles: ["weaviate"]  # This makes Weaviate optional
+    command:
+    - --host
+    - 0.0.0.0
+    - --port
+    - '8080'
+    - --scheme
+    - http
+    image: cr.weaviate.io/semitechnologies/weaviate:1.31.0-rc.0
+    restart: on-failure:0
+    ports:
+     - "8081:8080"
+     - 50052:50051
+    environment:
+      AUTOSCHEMA_ENABLED: 'false'
+      QUERY_DEFAULTS_LIMIT: 25
+      QUERY_MAXIMUM_RESULTS: 10000
+      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
+      PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
+      ASYNC_INDEXING: 'true'
+      ENABLE_MODULES: 'text2vec-ollama,generative-ollama,backup-filesystem'
+      ENABLE_API_BASED_MODULES: 'true'
+      BACKUP_FILESYSTEM_PATH: '/var/lib/weaviate/backups'
+      CLUSTER_HOSTNAME: 'node2'
+      CLUSTER_GOSSIP_BIND_PORT: '7102'
+      CLUSTER_DATA_BIND_PORT: '7103'
+      CLUSTER_JOIN: 'weaviate-node-1:7100'
+      RAFT_JOIN: 'node1,node2,node3'
+      RAFT_BOOTSTRAP_EXPECT: 3
+    volumes:
+    - weaviate-data2:/var/lib/weaviate
+    networks:
+      - weaviate-network
+
+  weaviate-node-3:  # Founding member service name
+    profiles: ["weaviate"]  # This makes Weaviate optional
+    command:
+    - --host
+    - 0.0.0.0
+    - --port
+    - '8080'
+    - --scheme
+    - http
+    image: cr.weaviate.io/semitechnologies/weaviate:1.31.0-rc.0
+    restart: on-failure:0
+    ports:
+     - "8082:8080"
+     - 50053:50051
+    environment:
+      AUTOSCHEMA_ENABLED: 'false'
+      QUERY_DEFAULTS_LIMIT: 25
+      QUERY_MAXIMUM_RESULTS: 10000
+      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
+      PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
+      ASYNC_INDEXING: 'false'
+      ENABLE_MODULES: 'text2vec-ollama,generative-ollama,backup-filesystem'
+      ENABLE_API_BASED_MODULES: 'true'
+      BACKUP_FILESYSTEM_PATH: '/var/lib/weaviate/backups'
+      CLUSTER_HOSTNAME: 'node3'
+      CLUSTER_GOSSIP_BIND_PORT: '7104'
+      CLUSTER_DATA_BIND_PORT: '7105'
+      CLUSTER_JOIN: 'weaviate-node-1:7100'
+      RAFT_JOIN: 'node1,node2,node3'
+      RAFT_BOOTSTRAP_EXPECT: 3
+    volumes:
+    - weaviate-data3:/var/lib/weaviate
     networks:
       - weaviate-network
 
@@ -42,4 +117,6 @@ networks:
     driver: bridge
 
 volumes:
-  weaviate-data:
+  weaviate-data1:
+  weaviate-data2:
+  weaviate-data3:
