--- a/requirements.txt
+++ b/requirements.txt
@@ -100,7 +100,7 @@ uri-template==1.3.0
 urllib3==2.4.0
 validators==0.34.0
 wcwidth==0.2.13
-weaviate-client==4.14.3
+weaviate-client @ git+https://github.com/weaviate/weaviate-python-client.git@83975f20bc4570bd50b1255ae4231cc86de6080d
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
