--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     - '8080'
     - --scheme
     - http
-    image: cr.weaviate.io/semitechnologies/weaviate:1.31.0-rc.0
+    image: cr.weaviate.io/semitechnologies/weaviate:1.31.0-rc.0-9ef4fcb
     restart: on-failure:0
     ports:
      - "8080:8080"
@@ -52,7 +52,7 @@ services:
     - '8080'
     - --scheme
     - http
-    image: cr.weaviate.io/semitechnologies/weaviate:1.31.0-rc.0
+    image: cr.weaviate.io/semitechnologies/weaviate:1.31.0-rc.0-9ef4fcb
     restart: on-failure:0
     ports:
      - "8081:8080"
@@ -88,7 +88,7 @@ services:
     - '8080'
     - --scheme
     - http
-    image: cr.weaviate.io/semitechnologies/weaviate:1.31.0-rc.0
+    image: cr.weaviate.io/semitechnologies/weaviate:1.31.0-rc.0-9ef4fcb
     restart: on-failure:0
     ports:
      - "8082:8080"
